--- a/dynamicgallery/index.html
+++ b/dynamicgallery/index.html
@@ -23,7 +23,10 @@
 			<a href ="img/10.jpg" class="img-wrapper" target =_blank><img src="img/10.jpg" alt="" class="image"></a>
 			<a href ="img/11.jpg" class="img-wrapper" target =_blank><img src="img/11.jpg" alt="" class="image"></a>
 			<a href ="img/12.jpg" class="img-wrapper" target =_blank><img src="img/12.jpg" alt="" class="image"></a>
-		</div>	
+		</div>
+	<form action="kibaka3x5.github.io/staticgallery/newfile.html" target="_blank">
+		<button>Первая галлерея</button>
+	</form>		
 	<footer>
 		<div class="copyright">
 		© Copyright Le'gush.com
