--- a/staticgallery/newfile.html
+++ b/staticgallery/newfile.html
@@ -27,6 +27,9 @@
 		<div class="item" style="background-image: url(img/12.jpg);"></div>
 	</main>
 	<footer>
+		<form action="kibaka3x5.github.io/staticgallery/newfile.html" target="_blank">
+			<button>Вторая галлерея</button>
+		</form>		
 		<div class="copyright">
 		© Copyright SeaPic
 		</div>
