--- a/dynamicgallery/index.html
+++ b/dynamicgallery/index.html
@@ -24,9 +24,7 @@
 			<a href ="img/11.jpg" class="img-wrapper" target =_blank><img src="img/11.jpg" alt="" class="image"></a>
 			<a href ="img/12.jpg" class="img-wrapper" target =_blank><img src="img/12.jpg" alt="" class="image"></a>
 		</div>
-	<form action="kibaka3x5.github.io/staticgallery/newfile.html" target="_blank">
-		<button>Первая галлерея</button>
-	</form>		
+		<button onclick="document.location='https://kibaka3x5.github.io/staticgallery/newfile.html'">Первая галлерея</button>		
 	<footer>
 		<div class="copyright">
 		© Copyright Le'gush.com
