--- a/staticgallery/newfile.html
+++ b/staticgallery/newfile.html
@@ -27,9 +27,7 @@
 		<div class="item" style="background-image: url(img/12.jpg);"></div>
 	</main>
 	<footer>
-		<form action="kibaka3x5.github.io/staticgallery/newfile.html" target="_blank">
-			<button>Вторая галлерея</button>
-		</form>		
+		<button onclick="document.location='https://kibaka3x5.github.io/dynamicgallery/index.html'">Вторая галлерея</button>	
 		<div class="copyright">
 		© Copyright SeaPic
 		</div>
