--- a/1/2.html
+++ b/1/2.html
@@ -36,10 +36,24 @@
     <section class="pf-c-page__main-section pf-m-dark-100">
 		<div class="pf-c-sidebar pf-m-split">	
 			<div class="pf-c-sidebar__main">
-			  <div class="pf-c-sidebar__panel"></div>
+			  <div class="pf-c-sidebar__panel">
+				<picture
+				class="pf-c-brand pf-m-picture"
+				style="--pf-c-brand--Width: 100px; --pf-c-brand--Width-on-sm: 250px; --pf-c-brand--Width-on-md: 300px; --pf-c-brand--Height-on-md: 1650px;"
+			  >
+		  <img class="pf-c-brand" src="img/10.gif">
+		  </picture>
+			  </div>
 			  <div class="pf-c-sidebar pf-m-panel-right">
 				<div class="pf-c-sidebar__main">
-				  <div class="pf-c-sidebar__panel"></div>
+				  <div class="pf-c-sidebar__panel">
+					<picture
+				class="pf-c-brand pf-m-picture"
+				style="--pf-c-brand--Width: 100px; --pf-c-brand--Width-on-sm: 250px; --pf-c-brand--Width-on-md: 300px; --pf-c-brand--Height-on-md: 1650px;"
+			  >
+		  <img class="pf-c-brand" src="img/10.gif">
+		  </picture>
+				  </div>
 
 		<div class="pf-c-content">
 		<h1 class="pf-c-title pf-m-4xl">Зачем нужна микроразметка???</h1>
